<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/etfirstName"
                        android:layout_width="match_parent"
                        android:textSize="19sp"
                        android:textColorHint="@android:color/white"
                        android:layout_height="70dp"
                        android:hint="@string/firstName"
                        android:gravity="center"
                        android:drawableRight="@drawable/email"
                        android:padding="10dp"
                        />
                    <EditText
                        android:id="@+id/etLastname"
                        android:layout_width="match_parent"
                        android:textSize="19sp"
                        android:textColorHint="@android:color/white"
                        android:layout_height="70dp"
                        android:hint="@string/lastName"
                        android:gravity="center"
                        android:drawableRight="@drawable/email"
                        android:padding="10dp"
                        />
                    <EditText
                        android:id="@+id/etphone"
                        android:layout_width="match_parent"
                        android:textSize="19sp"
                        android:textColorHint="@android:color/white"
                        android:layout_height="70dp"
                        android:hint="@string/phone"
                        android:gravity="center"
                        android:drawableRight="@drawable/email"
                        android:padding="10dp"
                        />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"
                        android:textColorHint="@android:color/white"
                        app:passwordToggleEnabled="true">
                        <EditText
                            android:id="@+id/etpassword"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:hint="@string/password"
                            android:gravity="center"
                            android:padding="10dp"
                            android:inputType="textPassword"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"
                        android:textColorHint="@android:color/white"
                        app:passwordToggleEnabled="true">
                        <EditText
                            android:id="@+id/etConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:hint="@string/confirmPassword"
                            android:gravity="center"
                            android:padding="10dp"
                            android:inputType="textPassword"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:text="@string/button"
                android:layout_gravity="center"
                android:background="@drawable/second_button"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/user"
                android:textSize="19sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
