<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_report" />
    </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/email"
        android:gravity="center"
        android:drawableRight="@drawable/email"
        android:padding="10dp"
        android:layout_margin="10dp" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/password"
        android:textColorHint="@drawable/buttons"
        android:gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textPassword"
        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/button"
        android:layout_gravity="center"
        android:background="@drawable/buttons"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/signup"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>